--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+    overflow-x: hidden !important;
+    font-family: 'Lato', sans-serif;
+}
+
 .toggleContainer {
     cursor: pointer;
     position: fixed;
@@ -38,9 +43,28 @@
     top: 0;
     bottom: 0;
     z-index: 1;
-    transition: 0.5s;
+    transition: 0.8s;
 }
 
 .sidebar.show{
     right: 0;
+}
+
+.sidebar ul {
+    list-style: none;
+    margin-bottom: 0;
+    padding-left: 0;
+    padding: 10% 0 0 10%;
+}
+
+.sidebar ul li a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 50px;
+    font-weight: 900;
+}
+
+.sidebar ul li
+{
+    padding: 10px 0 10px 0;
 }
