--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     overflow-x: hidden !important;
     font-family: 'Lato', sans-serif;
+    margin: 0;
 }
 
 .toggleContainer {
@@ -89,4 +90,20 @@ body {
         width: 100%;
         right: -100%;
     }
+}
+
+.fade-area {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    opacity: 0.5;
+    transition: 0.5s;
+}
+
+.fade-area.show{
+    display: block;
 }
