--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
 .sidebar ul li a {
     text-decoration: none;
     color: #fff;
-    font-size: 50px;
+    font-size: 40px;
     font-weight: 900;
     transition: 0.3s;
 }
@@ -73,6 +73,7 @@ body {
 .sidebar a {
     text-decoration: none;
     color: #fff;
+    text-transform: uppercase;
 }
 
 .sidebar ul li
